Source/WebCore/rendering/RenderLayerBacking.h
@@ -355,6 +355,7 @@ private:
     void updateBlendMode(const RenderStyle&);
 #endif
     void updateCustomAppearance(const RenderStyle&);
+    void updateContentsScalingFilters(const RenderStyle&);
 
     // Return the opacity value that this layer should use for compositing.
     float compositingOpacity(float rendererOpacity) const;
